theme/ElectionData-V2/style.css
/*
Theme Name: Election Data - V2
Theme URI: http://opendemocracymanitoba.com/
Author: Robert Burton
Author URI: http://opendemocracymanitoba.com/
Description: The Election Data theme is designed to display the candidates created by the Election Data plugin.
Version: 1.0
License: GNU General Public License
License URI: license.txt
Tags: election
*/

html, body, div, span, applet, object, iframe,
p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
news, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font-family: "Libre Franklin";
	vertical-align: baseline; }

h1, h2, h3, h4, h5, h6 {
	margin: 0 0 0.5em 10px;
	padding: 0;
	border: 0;
	vertical-align: baseline;
	font-family: "Libre Franklin"; }
	h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
		font-family: "Libre Franklin"; }

footer, header, hgroup, menu, nav, section {
	display: block; }

body {
	line-height: 1;
	font-size: 14px;
	-webkit-text-size-adjust: 100%;
	-ms-text-size-adjust: none; }

table {
	border-collapse: collapse;
	border-spacing: 0; }

a {
	color: #3b59bb;
	text-decoration: none; }
	a img {
		border: none; }

p {
	margin-bottom: 1em;
	margin-left: 10px; }


#container {
	  width: 960px;
	  margin: 40px auto 0 auto; }

footer {
	line-height: 30px;
  border-top: 60px solid rgba(161, 136, 163, 0.81);
  margin-top: 3em;
  padding-top: 20px;
  padding-left: 10%;
  padding-bottom: 2px;
  clear: both;
}


#footer_left{
		float: left;
		width: 33%;
		text-align: left;
}

#footer_center{
	float: left;
	width: 32%;
	text-align: left;

}

#footer_right{
	width: 33%;
	float: left;
}

footer .site-info{
  color: #777;
	font-size: 13px;
	text-align: left;
  margin-top: 4em;
	padding-bottom: 8px;
	letter-spacing: 0.5px;
}

footer h3{
    margin-left: 0;
    margin-top: 1em;
    font-size: 16px;
    color: #222;
}

footer p{
    margin-left: 0;
		font-size: 16px;
    padding-right: 1em;
}

.footer-menu{ max-height: 999px; 
overflow: hidden;}

  header h1 {
    margin-left: 0;
    margin-top: 20px;
    margin-bottom: 0.25em;
    font-family: "Libre Franklin";
    font-size: 36px;
    font-weight: bold;
    padding-right: 45px;
    }

  header h1 a {
    color: #181719;
  	}

  header h2 {
    font-weight: normal;
    font-size: 16px;
    color: #777;
    margin: 0 0 0.5em 0;
    padding-right: 45px;
    font-family: "Libre Franklin";
    font-style: italic; }

.breadcrumbs {
  margin-bottom: 40px;
}

#main {
	margin-top: 1em; }
	#main h2.title {
		margin-top: 10px; }

.hidden {
	display: none; }

.float-right{
	float:right;
}

.float-left{
	float:left;
}

.scroll{
	overflow:scroll;
}

.flow_it {
	  width: 100%;
	  overflow: hidden;
	  zoom: 1;
	  margin-bottom: 1em; }

.one_column, .two_columns, .three_columns, .two_columns_early_shrink {
  margin: 10px;
	float: left;
	color: #333333;
	line-height: 1.3; }
	.one_column p, .two_columns p, .three_columns p, .two_columns_early_shrink p {
		margin-bottom: 1em;
		margin-left: 0; }
	.one_column ul, .one_column ol, .two_columns ul, .two_columns ol, .three_columns ul, .three_columns ol, .two_columns_early_shrink ul, .two_columns_early_shrink ol {
		margin-left: 2em;
		margin-bottom: 1em; }
	.one_column h1, .one_column h2, .one_column h3, .one_column h4, .two_columns h1, .two_columns h2, .two_columns h3, .two_columns h4, .three_columns h1, .three_columns h2, .three_columns h3, .three_columns h4, .two_columns_early_shrink h1, .two_columns_early_shrink h2, .two_columns_early_shrink h3, .two_columns_early_shrink h4 {
		margin-bottom: 1em;
		margin-left: 0; }

.three_columns {
	width: 918px; }

.two_columns {
	width: 598px; }

.two_columns_early_shrink {
	width: 598px; }

.one_column {
	width: 278px; }

.two_column_flow {
	width: 640px;
	float: left; }

.one_column_flow {
	width: 320px;
	float: left; }

.medium_row {
	height: 350px; }

.short_row {
	height: 235px; }

.news-article {
	margin-bottom: 2em; }
	.news-article h3 {
		margin-bottom: 5px; }
	.news-article .date {
		font-size: 0.75em;
		margin-bottom: 1.1em; }
	.news-article .summary {
		font-size: 0.9em; }
	.news-article .summary, .news-article .summary b, .news-article .summary em, .news-article .date {
		font-family: Georgia, "Bitstream Charter", serif; }

p.news-article-notice{
	color: #666666;
	font-size: 0.9em;
	margin-bottom: 20px;
	margin-top: -10px; }

.politician, .party {
	margin: 10px;
	width: 298px;
	border: 1px solid #e4e4e4;
  border-radius: 10px;
	background-color: #eee;
  font-size: 1.05em;
	float: left;
  overflow: none;
  zoom: 1; }

.tall {
  /*height: 320px;*/
  height: 240px;
}

.short {
  /*height: 280px;*/
  height: 240px;
}


.politician .head img {
  border-radius: 50%; }

.politician .head img, .party .head img {
  border: 4px solid white;
  margin: 10px 0 0 10px; }

.politician .head {
  border-radius: 10px; 
  overflow: auto;
  zoom: 1;
  margin-bottom: 30px;
}

.politician .head img, .politician .head .info {
  float: left;
}

.politician .head .info {
  max-width: 155px; 
  margin-top: 0;
  margin-left: 15px; }

.politician .head .info p {
  display: table;
  font-size: 1.27em;
  margin: 0;
  height: 60px;
  max-width: 150px; }

.politician .head .info p a {
  color: #f9f9f9;
  display: table-cell;
  vertical-align: middle; }


.politician .status {
  font-size: 0.9em;
  color: #555;
  margin-top: 13px;
}

.politician .icons {
  margin-top: 9px;
}

.politician .icons a, .party .icons a {
    text-decoration: none;
}
.politician .icons i, .party .icons i {
  font-size: 1.6em;
  padding-right: 4px;
}

.politician .icons > i, .party .icons > i {
  color: #aaa;
}

.icons a i.fa-youtube {
  color: #ff0000;
}

.icons a i.fa-facebook {
  color: #4267b2;
}
/* ... */

